# mushr_rhc

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  debugger.rviz  package.xml  setup.cfg  setup.py  test.sh
config/: config.yaml
mushr_rhc_ros/: CMakeLists.txt  debugger.rviz  env.txt  issues.txt  package.xml  setup.py  viz-paths.rviz
mushr_rhc_ros/launch/: all.launch  all_params.yaml  debug.launch  localize.launch  mapserver.launch  particlefilter.launch  sim.launch  tl-real.launch  tl-sim.launch  tl.launch  viz-paths.launch
mushr_rhc_ros/launch/debug/: debug-block-sim.launch  debug-real.launch  debug-sim.launch  debug.launch  params.yaml  real.launch  real.yaml  sim.launch  sim.yaml
mushr_rhc_ros/launch/params/: all_params.yaml
mushr_rhc_ros/launch/real/: block_real_gpr.launch  block_real_with_sim_gpr.launch  params.yaml  params_block_real_gpr.yaml  params_block_real_with_sim_gpr.yaml  real.launch  record.launch
mushr_rhc_ros/launch/sim/: block_sim.launch  block_sim_gpr.launch  block_sim_nn.launch  params.yaml  params_block_sim.yaml  params_block_sim_gpr.yaml  sim.launch
mushr_rhc_ros/launch/viz-paths/: params.yaml  viz-paths.launch
mushr_rhc_ros/maps/: cse014-small.pgm  cse014-small.yaml  map.yaml  real-floor0-edited-c2g-full-loop.yaml  real-floor0-edited-c2g.yaml
mushr_rhc_ros/msg/: MPPIPath.msg  Particle.msg  ParticleArray.msg  SimpleTrajectory.msg  TLCosts.msg
mushr_rhc_ros/scripts/: save_traj.py  send_traj.py  test.txt  trajgen.py
mushr_rhc_ros/scripts/trajs/: left-10.0.pickle  left-15.0.pickle  left-2.5.pickle  left-20.0.pickle  left-4.0.pickle  left-kink-2.0.pickle  left-kink-3.0.pickle  left-kink-5.0.pickle  left-turn-10.0.pickle  left-turn-15.0.pickle  left-turn-20.0.pickle  right-10.0.pickle  right-15.0.pickle  right-2.5.pickle  right-20.0.pickle  right-4.0.pickle  right-kink-2.0.pickle  right-kink-3.0.pickle  right-kink-5.0.pickle  right-turn-10.0.pickle  right-turn-15.0.pickle  right-turn-20.0.pickle  straight.pickle
mushr_rhc_ros/src/: debugger.py  logger.py  main.py  parameters.py  rhcbase.py  rhcblock.py  rhcdebug.py  rhcnode.py  rhctensor.py  rosvizpath.py  utils.py
mushr_rhc_ros/src/librhc/: M3PI.py  __init__.py  mpc.py  mpc_utils.py
mushr_rhc_ros/srv/: GetPlan.srv
mushr_rhc_ros/test/: testmain.py
src/: mpc.py  (+11 more)
(+101 files in other folders)
