<?xml version="1.0"?>
<package format="2">
  <name>mushr_rhc_ros</name>
  <version>1.0.0</version>
  <description>Receding Horizon Controller base package</description>

  <maintainer email="rockettm@cs.washington.edu">Matthew Rockett</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>

  </export>
</package>
